# GameAnywhere

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPERS.md  README.md  __init__.py  requirements.txt  setup.py
client/: index.html  player.html
client/css/: main.css  main_index.css
examples/: CMakeLists.txt  hanabi.py  poker.py  run_server.py  server.cpp
examples/chess/: chess.py
examples/tic_tac_toe/: CMakeLists.txt  tic_tac_toe.cpp  tic_tac_toe.hpp  tic_tac_toe.py
examples/werewolves/: __init__.py  werewolves.py
game_anywhere/: protocols.py  run_game.py
game_anywhere/agents/: __init__.py  chat.py  descriptors.py  local_agent.py  network_agent.py  parse_descriptors.py
game_anywhere/components/: __init__.py  board.py  component.py  containers.py  list.py  utils.py
game_anywhere/components/traditional/: cards.py
game_anywhere/core/: __init__.py  agent.py  game.py  turn_based_game.py
game_anywhere/network/: README.md  __init__.py  async_resource.py  game_room.py  http_controlled_server.py  room.py  router.py  server.py  spectator.py
game_anywhere/ui/: ui.py
include/: run_game.hpp  run_game.py
include/components/: __init__.py  board.hpp  board.py  component.py  list.py
include/core/: __init__.py  agent.hpp  agent.py  agent_descriptor.hpp  game.hpp  game.py  turn_based_game.hpp
include/network/: server.h  server.hpp
include/ui/: ui.py
scripts/: client  example_agent.py
src/: CMakeLists.txt  core.h  python_runtime.c  run_game.c
src/agents/: CMakeLists.txt  __init__.py  agent_descriptor.py  agents.cpp  descriptors.py  local_agent.cpp  local_agent.hpp  local_agent.py  network_agent.py  parse_agent_descriptor.py  parse_descriptors.py  random_agent.cpp  random_agent.hpp
src/agents/python/: CMakeLists.txt  pyagent.cpp  pyagent.h  setup.py
src/network/: CMakeLists.txt  async_resource.py  game_room.py  http_controlled_server.py  room.cpp  room.hpp  room.py  router.py  server.cpp  server.hpp  server.py  spectator.cpp  spectator.hpp  spectator.py
src/network/base/: CMakeLists.txt  base_server.cpp  base_server.hpp  http_session.cpp  http_session.hpp  router.cpp  router.hpp  routing.hpp
src/templates/: index.html
src/templates/css/: main_index.css
